Bug 1228287 - Make sure we can't do SkiaGL without the pref set. r=benwa a=ritu